do swagger 3.0
