# delivery/controller/category_controller.go
@@ -19,6 +19,17 @@ func NewCategoryController(cc domain.ICategoryUsecase) *CategoryController {
 	}
 }
 
+// @Summary      Create Category
+// @Description  Create a category for procedures
+// @Tags         Category
+// @Accept       json
+// @Produce      json
+// @Param        Authorization header string true "Bearer token"
+// @Param        request body CreateCategoryRequest true "Category Details"
+// @Success      200 {object} domain.Category "New Category"
+// @Failure      400 {string}  "invalid
+// @Failure      500 {string}  "invalid"
+// @Router       /categories [post]
 func (ctrl *CategoryController) CreateCategory(c *gin.Context) {
 	// Implementation for creating a category will go here
 	var req CreateCategoryRequest
@@ -42,6 +53,21 @@ func (ctrl *CategoryController) CreateCategory(c *gin.Context) {
 	c.JSON(http.StatusCreated, gin.H{"message": "Category created successfully", "category": category})
 }
 
+// @Summary      Get Categories
+// @Description  Get list of categories
+// @Tags         Category
+// @Accept       json
+// @Produce      json
+// @Param        page query string false "page"
+// @Param        limit query string false "limit"
+// @Param        sortBy query string false "sortBy"
+// @Param        parentID query string false "parentID"
+// @Param        organizationID query string false "organizationID"
+// @Param        title query string false "title"
+// @Success      200 {object} PaginatedCategoryResponse "List of Categories"
+// @Failure      400 {string}  "invalid
+// @Failure      500 {string}  "invalid"
+// @Router       /categories [get]
 func (ctrl *CategoryController) GetCategory(c *gin.Context) {
 	// Implementation for creating a category will go here
 	options := domain.CategorySearchAndFilter{}
